<resources>
    <string name="app_name">MeChat</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="log_in_to_continue">Log in to continue</string>
    <string name="enter_email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create account</string>
    <string name="log_in">Log in</string>
    <string name="create_your_account">Create your account</string>
    <string name="add_profile_photo">Add profile photo</string>
    <string name="create_username">Create username</string>
    <string name="create_email">Create email</string>
    <string name="create_password">Create password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account_two">Create account</string>
    <string name="log_in_two">Log in</string>
    <string name="log_out_button">Log out button</string>
    <string name="this_is_a_sample_text">This is a sample text</string>
    <string name="error_loading_users">Error loading users</string>
    <string name="users">Users</string>
</resources>