<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:overScrollMode="always"
    android:clipToPadding="false"
    tools:context=".activities.SignUpActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/create_your_account"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:padding="10dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            app:cardCornerRadius="50dp"
            android:id="@+id/selectImage">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/add_profile_placeholder_two"
                    android:id="@+id/imgProfilePhoto"
                    android:contentDescription="@string/add_profile_photo"/>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/createUsername"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/create_username"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/createEmail"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/create_email"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/createPassword"
            app:endIconMode="password_toggle"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/create_password"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirmPassword"
            app:endIconMode="password_toggle"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_account_two"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_style"
                android:id="@+id/btnCreateAccount"
                android:layout_centerInParent="true"/>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:id="@+id/myProgressBar"
                android:visibility="invisible"/>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in_two"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:textStyle="bold"
            android:id="@+id/txtGoToLogIn"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"/>
    </LinearLayout>

</ScrollView>