<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".activities.MainActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">
        <androidx.cardview.widget.CardView
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:cardCornerRadius="10dp"
            android:layout_margin="10dp"
            android:layout_alignParentStart="true"
            android:id="@+id/cardViewOne">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/imgProfileImage"/>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:cardCornerRadius="10dp"
            android:layout_margin="10dp"
            android:layout_alignParentEnd="true"
            android:id="@+id/cardViewTwo">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_log_out"
                    android:contentDescription="@string/log_out_button"
                    android:id="@+id/imgLogOut"/>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/cardViewTwo"
            android:layout_toEndOf="@id/cardViewOne"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/txtName"
            android:text="@string/this_is_a_sample_text"
            android:ellipsize="end"
            android:maxLines="1"
            android:gravity="center"/>

    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:src="@drawable/ic_new_chat"
        android:id="@+id/btnNewChat"
        android:contentDescription="@string/app_name"/>



</RelativeLayout>